# ZivyObraz

./: README.md  pyproject.toml
zivy-obraz/: hesla.py
